typegraph/core/src/runtimes/prisma/relationship/snapshots/typegraph_core__runtimes__prisma__relationship__test__explicitly named relationship.snap
---
source: typegraph/core/src/runtimes/prisma/relationship/mod.rs
expression: registry
---
RelationshipRegistry {
    models: {
        Type#4: RegisteredModel {
            relationships: {
                "posts": "PostAuthor",
            },
            name: "User",
            id_field: "id",
        },
        Type#8: RegisteredModel {
            relationships: {
                "author": "PostAuthor",
            },
            name: "Post",
            id_field: "id",
        },
    },
    models_by_name: {},
    relationships: {
        "PostAuthor": Relationship {
            name: "PostAuthor",
            left: RelationshipModel {
                model_type: Type#4,
                model_name: "User",
                wrapper_type: Type#7,
                cardinality: One,
                field: "posts",
            },
            right: RelationshipModel {
                model_type: Type#8,
                model_name: "Post",
                wrapper_type: Type#3,
                cardinality: Many,
                field: "author",
            },
        },
    },
}
