typegraph/core/src/runtimes/prisma/relationship/snapshots/typegraph_core__runtimes__prisma__relationship__test__implicit relationship.snap
---
source: typegraph/core/src/runtimes/prisma/relationship/mod.rs
expression: ctx
---
PrismaContext {
    models: {
        Type#4: ModelRef(
            RefCell {
                value: Model {
                    type_id: Type#4,
                    type_name: "User",
                    props: {
                        "id": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#0,
                                type_id: Type#0,
                                prop_type: Integer,
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: false,
                            },
                        ),
                        "name": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#1,
                                type_id: Type#1,
                                prop_type: String(
                                    Plain,
                                ),
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: false,
                            },
                        ),
                        "posts": Model(
                            RelationshipProperty {
                                wrapper_type_id: Type#3,
                                model_id: Type#8,
                                quantifier: Many,
                                relationship_attributes: RelationshipAttributes {
                                    name: None,
                                    target_field: None,
                                    fkey: None,
                                },
                                unique: false,
                            },
                        ),
                    },
                    id_field: "id",
                    relationships: {
                        "posts": "__rel_Post_User_2",
                    },
                },
            },
        ),
        Type#8: ModelRef(
            RefCell {
                value: Model {
                    type_id: Type#8,
                    type_name: "Post",
                    props: {
                        "id": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#5,
                                type_id: Type#5,
                                prop_type: Integer,
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: true,
                            },
                        ),
                        "title": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#6,
                                type_id: Type#6,
                                prop_type: String(
                                    Plain,
                                ),
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: false,
                            },
                        ),
                        "author": Model(
                            RelationshipProperty {
                                wrapper_type_id: Type#7,
                                model_id: Type#4,
                                quantifier: One,
                                relationship_attributes: RelationshipAttributes {
                                    name: None,
                                    target_field: None,
                                    fkey: None,
                                },
                                unique: false,
                            },
                        ),
                    },
                    id_field: "id",
                    relationships: {
                        "author": "__rel_Post_User_2",
                    },
                },
            },
        ),
    },
    models_by_name: {},
    relationships: {
        "__rel_Post_User_1": Relationship {
            name: "__rel_Post_User_1",
            left: RelationshipModel {
                model_type: Type#4,
                model_name: "User",
                wrapper_type: Type#7,
                cardinality: One,
                field: "posts",
            },
            right: RelationshipModel {
                model_type: Type#8,
                model_name: "Post",
                wrapper_type: Type#3,
                cardinality: Many,
                field: "author",
            },
        },
        "__rel_Post_User_2": Relationship {
            name: "__rel_Post_User_2",
            left: RelationshipModel {
                model_type: Type#4,
                model_name: "User",
                wrapper_type: Type#7,
                cardinality: One,
                field: "posts",
            },
            right: RelationshipModel {
                model_type: Type#8,
                model_name: "Post",
                wrapper_type: Type#3,
                cardinality: Many,
                field: "author",
            },
        },
    },
    typegen_cache: OnceCell(Uninit),
    complete_registrations: {
        Type#4,
        Type#8,
    },
    counter: Cell {
        value: 2,
    },
}
