typegraph/core/src/runtimes/prisma/relationship/snapshots/typegraph_core__runtimes__prisma__relationship__test__relationship_discovery.snap
---
source: typegraph/core/src/runtimes/prisma/relationship/mod.rs
expression: registry
---
Ok(
    RelationshipRegistry {
        models: {
            4: {
                "posts": "UserToPost",
            },
            7: {
                "author": "UserToPost",
            },
        },
        relationships: {
            "UserToPost": Relationship {
                name: "UserToPost",
                left: RelationshipModel {
                    model_type: 4,
                    wrapper_type: 4,
                    cardinality: One,
                    field: "posts",
                },
                right: RelationshipModel {
                    model_type: 7,
                    wrapper_type: 3,
                    cardinality: Many,
                    field: "author",
                },
            },
        },
    },
)
