typegraph/core/src/runtimes/prisma/relationship/snapshots/typegraph_core__runtimes__prisma__relationship__test__unique attribute.snap
---
source: typegraph/core/src/runtimes/prisma/relationship/mod.rs
expression: ctx
---
PrismaContext {
    models: {
        Type#3: ModelRef(
            RefCell {
                value: Model {
                    type_id: Type#3,
                    type_name: "User",
                    props: {
                        "id": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#0,
                                type_id: Type#0,
                                prop_type: Integer,
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: false,
                            },
                        ),
                        "profile": Model(
                            RelationshipProperty {
                                wrapper_type_id: Type#2,
                                model_id: Type#7,
                                quantifier: Optional,
                                relationship_attributes: RelationshipAttributes {
                                    name: None,
                                    target_field: None,
                                    fkey: None,
                                },
                                unique: true,
                            },
                        ),
                    },
                    id_field: "id",
                    relationships: {
                        "profile": "__rel_User_Profile_1",
                    },
                },
            },
        ),
        Type#7: ModelRef(
            RefCell {
                value: Model {
                    type_id: Type#7,
                    type_name: "Profile",
                    props: {
                        "id": Scalar(
                            ScalarProperty {
                                wrapper_type_id: Type#4,
                                type_id: Type#4,
                                prop_type: Integer,
                                injection: None,
                                quantifier: One,
                                unique: false,
                                auto: false,
                            },
                        ),
                        "user": Model(
                            RelationshipProperty {
                                wrapper_type_id: Type#6,
                                model_id: Type#3,
                                quantifier: Optional,
                                relationship_attributes: RelationshipAttributes {
                                    name: None,
                                    target_field: None,
                                    fkey: None,
                                },
                                unique: false,
                            },
                        ),
                    },
                    id_field: "id",
                    relationships: {
                        "user": "__rel_User_Profile_1",
                    },
                },
            },
        ),
    },
    models_by_name: {},
    relationships: {
        "__rel_User_Profile_0": Relationship {
            name: "__rel_User_Profile_0",
            left: RelationshipModel {
                model_type: Type#7,
                model_name: "Profile",
                wrapper_type: Type#2,
                cardinality: Optional,
                field: "user",
            },
            right: RelationshipModel {
                model_type: Type#3,
                model_name: "User",
                wrapper_type: Type#6,
                cardinality: Optional,
                field: "profile",
            },
        },
        "__rel_User_Profile_1": Relationship {
            name: "__rel_User_Profile_1",
            left: RelationshipModel {
                model_type: Type#7,
                model_name: "Profile",
                wrapper_type: Type#2,
                cardinality: Optional,
                field: "user",
            },
            right: RelationshipModel {
                model_type: Type#3,
                model_name: "User",
                wrapper_type: Type#6,
                cardinality: Optional,
                field: "profile",
            },
        },
    },
    typegen_cache: OnceCell(
        <uninit>,
    ),
    complete_registrations: {
        Type#3,
        Type#7,
    },
    counter: Cell {
        value: 2,
    },
}
